--- a/less/games.less
+++ b/less/games.less
@@ -63,12 +63,12 @@
 		}
 
 		@media @mobile {
-			width: 50%;
+			// width: 50%;
 			margin-bottom: 30px;
 			text-align: center;
 		}
 
-		@media (max-width: 450px) {
+		@media (max-width: 560px) {
 			width: 100%;
 		}
 	}
