--- a/less/incomes.less
+++ b/less/incomes.less
@@ -4,12 +4,9 @@
 	background-size: cover;
 
 	&__wrapper {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
 		width: 1180px;
 		margin: 0 auto;
-		padding-bottom: 190px;
+		padding-bottom: 100px;
 
 		@media @tablet {
 			width: 748px;
@@ -23,7 +20,6 @@
 
 	&__header {
 		position: relative;
-		width: 100%;
 		margin-bottom: 30px;
 		font-family: SFUIHeavy;
 		font-size: 39px;
@@ -47,7 +43,6 @@
 	}
 
 	&__underheader {
-		width: 100%;
 		margin-bottom: 95px;
 		font-family: SFUIHeavy;
 		font-size: 30px;
@@ -56,6 +51,31 @@
 		@media @mobile {
 			margin-bottom: 40px;
 			font-size: 24px;
+		}
+	}
+
+	&__levels-wrapper {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;		
+		margin-bottom: 60px;
+	}
+
+	&__button-wrapper {
+		width: 100%;
+		text-align: center;
+	}
+
+	&__button {
+		display: inline-block;
+		margin: 0 auto;
+		padding: 30px 55px;
+		background-color: @main-color;
+		font-family: SFUIBold;
+		font-size: 18px;
+
+		&:hover {
+			background-color: @main-color-hover;
 		}
 	}
 }
