--- a/less/registration.less
+++ b/less/registration.less
@@ -108,8 +108,7 @@
 		text-transform: uppercase;
 
 		@media @mobile {
-			margin-bottom: 0
-			;
+			margin-bottom: 0;
 			font-size: 16px;
 			line-height: 25px;
 		}
@@ -177,7 +176,7 @@
 			}
 
 			&__underheader {
-				font-size: 20px;
+				font-size: 18px;
 				line-height: 25px;
 			}
 
