--- a/less/levels.less
+++ b/less/levels.less
@@ -3,11 +3,25 @@
 	&__wrapper {
 		width: 1180px;
 		margin: 0 auto;
-		padding-top: 40px;
+		padding-top: 60px;
+
+		@media @tablet {
+			width: 748px;
+		}
+
+		@media @mobile {
+			.mobile-wrap;
+			padding-top: 40px;
+		}
 	}
 
 	&__header-wrapper {
+		margin-bottom: 80px;
 		text-align: center;
+
+		@media @mobile {
+			margin-bottom: 40px;
+		}
 	}
 
 	&__header {
@@ -18,55 +32,35 @@
 		font-family: SFUIHeavy;
 		text-transform: uppercase;
 		border-bottom: 3px solid #ed383f;
+
+		@media @mobile {
+			font-size: 24px;
+		}
 	}
 }
 
-.level-modal--static {
-	position: relative;
-	z-index: 1;
-	top: 250px !important;
-	display: block;
-	width: 100%;
-	border: 1px solid #161616;
-	box-shadow: 0 0 30px 0 #161616;
+.level-up-page {
+	margin-bottom: 80px;
+	box-shadow: 0 0 20px 0 #000;
 
-	&:nth-child(2) {
-		margin-bottom: 180px;
-
-		@media @mobile {
-			margin-bottom: 110px;
-		}
-	}
-
-	&:nth-child(3) {
-		margin-bottom: 110px;
-
-		@media @mobile {
-			margin-bottom: 15px;
-		}
-	}
-
-	&:nth-child(4) {
-		margin-bottom: 140px;
-
-		@media @mobile {
-			margin-bottom: 50px;
-		}
-	}
-
-	&:last-child {
+	@media @mobile {
 		margin-bottom: 40px;
+	}
 
-		@media @mobile {
-			margin-bottom: 0;
+	.level-up {
+		padding: 20px;
+
+		&__header-wrapper {
+			position: relative;
+			top: 0;
 		}
 	}
 
 	.level-ability {
-		width: 355px;
+		width: 368px;
 
 		@media @tablet {
-			width: 200px;
+			width: 223px;
 		}
 
 		@media @mobile {
@@ -74,27 +68,199 @@
 		}
 	}
 
-	.level-modal__ability-wrapper {
-		margin-bottom: 20px;
-	}
-
 	.level-ability--wide {
-		width: 550px;
+		width: 560px;
 
 		@media @tablet {
-			width: 315px;
+			width: 345px;
 		}
 	}
+}
 
-	.level-modal__level {
-		margin-top: 10px;
+.level-up {
+	padding: 40px 25px;
+	padding-top: 80px;	
+
+	@media @mobile {
+		padding: 10px;
 	}
 
-	.level-modal__about {
+	&__header-wrapper {
+		position: absolute;
+		left: 20px;
+		top: -90px;
 
 		@media @mobile {
+			position: relative;
+			top: 0;
+			left: 0;
+			display: flex;
+			align-items: center;
+		}
+	}
+
+	&__number {
+		font-size: 150px;
+		color: #56c074;
+		font-family: SFUIHeavy;
+
+		@media @mobile {
+			display: inline-block;
+			margin-right: 10px;
+			font-size: 100px;
+		}
+	}
+
+	&__number--first {
+		color: #56c074;		
+	}
+
+	&__number--second {
+		color: #d6712d;		
+	}
+
+	&__number--third {
+		color: #c2c2c2;		
+	}
+
+	&__greeting-wrapper {
+		position: absolute;
+		top: 60px;
+		left: 65px;
+
+		@media @mobile {
+			position: relative;
+			top: 0;
+			left: 0;
+			display: inline-block;
+		}
+	}
+
+	&__greeting {
+		display: block;
+		font-size: 26px;
+		font-family: SFUILight;
+		white-space: pre;
+
+		@media @mobile {
+			font-size: 20px;
+			white-space: normal;
+		}
+	}
+
+	&__level {
+		display: block;
+		font-size: 30px;
+		font-family: SFUIHeavy;
+		text-transform: uppercase;
+
+		@media @mobile {
+			font-size: 20px;
+		}
+	}
+
+	&__up-text {
+		display: block;
+		margin-bottom: 25px;
+		font-size: 18px;
+		font-family: SFUIMedium;
+	}
+
+	&__ability-wrapper {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	&__about {
+		@media @mobile {
+			font-size: 13px;
+		}
+	}
+}
+
+.level-ability {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	width: 250px;
+	margin-bottom: 20px;
+	padding: 10px;
+	border: 1px dashed @secondary-color;
+	text-align: center;
+
+	@media @tablet {
+		width: 205px;
+	}
+
+	@media @mobile {
+		width: 100%;
+		margin-bottom: 10px;
+		padding: 10px;
+	}
+
+	&__header {
+		width: 100%;
+		font-size: 20px;
+		font-family: SFUIHeavy;
+		text-transform: uppercase;
+
+		@media @tablet {
+			font-size: 16px;
+		}
+
+		@media @mobile {
+			margin-bottom: 0;
+			font-size: 14px;
+		}
+	}
+
+	&__text {
+		color: #afaeae;
+		font-size: 14px;
+		line-height: 23px;
+	}
+}
+
+.level-ability--wide {
+	width: 385px;
+
+	@media @tablet {
+		width: 315px;
+	}
+}
+
+.level-details {
+
+	&__wrapper {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 25px 30px;
+		background-color: rgba(35, 35, 35, 0.85);
+
+		@media @mobile {
+			flex-wrap: wrap;
+			padding: 10px;
+		}
+	}
+
+	&__text {
+		font-size: 14px;
+		line-height: 24px;
+		color: #d0d0d0;
+		font-family: SFUIRegular;
+
+		@media @mobile {
+			width: 100%;
+			margin-bottom: 10px;
+			line-height: 18px;
 			text-align: center;
 		}
+	}
+
+	&__bottom-text {	
 
 		span {
 			display: inline-block;
@@ -102,23 +268,15 @@
 		}
 	}
 
-	.level-modal__up-text {
-		position: relative;
+	&__button {
+		padding: 20px 25px;
+		background-color: #ed383f;
+		font-size: 14px;
 
 		@media @mobile {
-			text-align: center;
-		}
-	}
-
-	.level-modal__level {
-		white-space: pre;
-	}
-
-	.level-modal__number {
-		width: 60px;
-
-		img {
-			width: 100%;
+			max-width: 100%;
+			margin: 0 auto;
+			padding: 10px 20px;
 		}
 	}
 }
