--- a/less/partners.less
+++ b/less/partners.less
@@ -21,7 +21,7 @@
 
 		@media @mobile {
 			.mobile-wrap;
-			padding: 20px 0;
+			padding: 20px 10px;
 		}
 		
 		img {
@@ -31,6 +31,37 @@
 
 			@media @mobile {
 				margin-bottom: 20px;
+			}
+		}
+	}
+
+	&__images {
+		margin-bottom: 40px;
+		text-align: center;
+
+		@media @mobile {
+			margin-bottom: 20px;
+		}
+
+		img {
+			display: inline-block;
+			width: auto;
+			max-height: 35px;
+			margin: 0 5px 10px 5px;
+			vertical-align: middle;
+
+			@media @mobile {
+				&:nth-child(4),
+				&:nth-child(5),
+				&:nth-child(6),
+				&:nth-child(7),
+				&:nth-child(8),
+				&:nth-child(9),
+				&:nth-child(10),
+				&:nth-child(11),
+				&:nth-child(12) {
+					display: none;
+				}
 			}
 		}
 	}
