--- a/less/popular-games.less
+++ b/less/popular-games.less
@@ -20,17 +20,27 @@
 	&__header {
 		font-family: SFUIHeavy;
 		font-size: 24px;
+		line-height: 24px;
+
+		@media @mobile {
+			font-size: 18px;
+		}
 	}
 
 	&__button {
+		padding: 18px;
 		margin-top: 20px;
 		margin-bottom: 20px;
-		padding: 20px;
-		background-color: @secondary-color;
-		font-size: 14px;
+		border: 2px solid @secondary-color;
+		background-color: transparent;
 
 		&:hover {
+			border-color: @secondary-color-hover;
 			background-color: @secondary-color-hover;
+		}
+
+		@media @mobile {
+			padding: 10px 12px; 
 		}
 	}
 
