--- a/less/tabs.less
+++ b/less/tabs.less
@@ -196,16 +196,26 @@
 		font-family: SFUIHeavy;
 		font-size: 24px;
 		line-height: 24px;
+
+		@media @mobile {
+			font-size: 18px;
+		}
 	}
 
 	&__button {
-		padding: 20px;
+		padding: 18px;
 		margin-top: 20px;
 		margin-bottom: 20px;
-		background-color: @secondary-color;
+		border: 2px solid @secondary-color;
+		background-color: transparent;
 
 		&:hover {
+			border-color: @secondary-color-hover;
 			background-color: @secondary-color-hover;
+		}
+
+		@media @mobile {
+			padding: 10px 12px; 
 		}
 	}
 
