--- a/less/header.less
+++ b/less/header.less
@@ -244,6 +244,8 @@
 		@media @mobile {
 			left: -10px;
 			width: ~"calc(100% + 20px)";
+			overflow: scroll;
+			max-height: ~"calc(100vh - 90px)";
 		}
 	}
 
