--- a/less/header.less
+++ b/less/header.less
@@ -244,7 +244,7 @@
 		@media @mobile {
 			left: -10px;
 			width: ~"calc(100% + 20px)";
-			overflow: scroll;
+			overflow-y: scroll;
 			max-height: ~"calc(100vh - 90px)";
 		}
 	}
@@ -274,6 +274,10 @@
 				display: block;
 				padding: 20px 0;
 			}
+		}
+
+		@media @mobile {
+			font-size: 14px;
 		}
 
 		a {
