changes from ng branch

--- a/less/greeting-bonus.less
+++ b/less/greeting-bonus.less
@@ -27,6 +27,10 @@
 		font-family: SFUIBold;
 		text-align: center;
 		text-transform: uppercase;
+
+		@media @mobile {
+			font-size: 22px;
+		}
 	}
 
 	&__count {
