--- a/less/header.less
+++ b/less/header.less
@@ -64,6 +64,7 @@
 .main-nav {
 	position: relative;
 	display: flex;
+	align-items: center;
 
 	@media @tablet {
 
@@ -460,6 +461,7 @@
 			}
 
 			@media @mobile {
+				font-size: 14px;
 
 				&::after {
 					transform: rotate(45deg);
