--- a/less/modals.less
+++ b/less/modals.less
@@ -33,6 +33,10 @@
 		font-family: SFUIBold;
 		font-size: 25px;
 		text-transform: uppercase;
+
+		@media @mobile {
+			max-width: ~"calc(100% - 50px)";
+		}
 	} 
 
 	&__text {
@@ -44,7 +48,7 @@
 	&__button {
 		padding: 20px 45px;
 		border: none;
-		background-color: #ed383f;
+		background-color: #ed383f; 
 		font-family: SFUIMedium;
 		font-size: 14px;
 		color: #fff;
@@ -245,6 +249,10 @@
 
 		@media @tablet {
 			width: 440px;
+		}
+
+		@media @mobile {
+			width: 100%;
 		}
 	}
 }
