--- a/less/popular-games.less
+++ b/less/popular-games.less
@@ -58,6 +58,7 @@
 		cursor: pointer;
 
 		&:hover {
+			border-color: @secondary-color-hover;
 			background-color: @secondary-color-hover;
 		}
 	}
