--- a/less/tabs.less
+++ b/less/tabs.less
@@ -297,6 +297,7 @@
 		cursor: pointer;
 
 		&:hover {
+			border-color: @secondary-color-hover;
 			background-color: @secondary-color-hover;
 		}
 	}
