--- a/less/slider.less
+++ b/less/slider.less
@@ -268,5 +268,8 @@
 	&__link {
 		display: inline-block;
 		border-bottom: 1px dashed #fff;
+		background-color: transparent;
+		font-family: SFUIBold;
+		font-size: 14px;
 	}
 }
