--- a/less/tournament.less
+++ b/less/tournament.less
@@ -98,6 +98,8 @@
 		border-bottom: 2px dotted #fff;
 		text-align: center;
 		background-color: transparent;
+		font-family: SFUIBold;
+		font-size: 14px;
 	}
 }
 
