--- a/less/last-winners.less
+++ b/less/last-winners.less
@@ -62,6 +62,7 @@
 		flex-wrap: wrap;
 		flex-direction: column;
 		text-align: center;
+		width: 240px;
 
 		@media @tablet {
 			margin-bottom: 20px;
