--- a/less/header.less
+++ b/less/header.less
@@ -23,6 +23,15 @@
 		}
 	}
 
+	&__buttons {
+	}
+
+	&__authorized {
+		display: none;
+		// display: flex;
+		font-size: 14px;
+	}
+
 	&__first-button {
 		padding: 15px 20px;
 		margin-top: 15px;
@@ -58,6 +67,40 @@
 		@media @mobile {
 			display: none;
 		}
+	}
+
+	&__nickname,
+	&__money {
+		position: relative;
+		padding: 31px 10px;
+		padding-right: 35px;
+		cursor: pointer;
+		transition: 0.1s;
+
+		&:hover {
+			background-color: #050505;
+
+			&::after {
+				border-color: #fff;
+			}	
+		}
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 33px;
+			right: 15px;
+			width: 8px;
+			height: 8px;
+			border-right: 1px solid #303030;
+			border-bottom: 1px solid #303030;
+			transform: rotate(45deg);
+			transition: 0.1s;
+		}
+	}
+
+	&__money {
+		margin-right: 20px;
 	}
 }
 
@@ -128,6 +171,7 @@
 
 		@media @tablet {
 			margin-left: 150px;
+			margin-right: 0;
 		}
 
 		@media @mobile {
@@ -265,6 +309,7 @@
 	&__item {
 		position: relative;
 		display: inline-block;
+		font-size: 14px;
 
 		@media @tablet {
 			display: block;
@@ -336,7 +381,7 @@
 			@media (min-width: 1200px) {
 				.main-nav__dropdown {
 					z-index: 100;
-					top: 49px;
+					top: 46px;
 					opacity: 1;
 				}
 
@@ -345,7 +390,7 @@
 					a {
 						height: auto;
 						padding: 15px;
-						font-size: 16px;
+						font-size: 14px;
 					}
 				}
 			}
@@ -354,7 +399,7 @@
 
 	&__dropdown {
 		position: absolute;
-		top: 50px;
+		top: 46px;
 		width: auto;
 		list-style: none;
 		opacity: 0;
@@ -419,7 +464,7 @@
 				a {
 					height: auto;
 					padding: 15px;
-					font-size: 16px;
+					font-size: 14px;
 				}
 			}
 		}
@@ -438,8 +483,6 @@
 				position: absolute;
 				top: 33px;
 				right: 15px;
-				// left: ~"calc(50% - 7px)";
-				// bottom: 13px;
 				width: 8px;
 				height: 8px;
 				border-right: 1px solid #303030;
