--- a/less/header.less
+++ b/less/header.less
@@ -76,7 +76,9 @@
 
 	&__auth-user {
 		position: relative;
-		padding: 31px 10px;
+		display: flex;
+		align-items: center;
+		padding: 28px 10px;
 		padding-right: 35px;
 		cursor: pointer;
 		transition: 0.1s;
@@ -115,6 +117,24 @@
 			border-bottom: 1px solid #303030;
 			transform: rotate(45deg);
 			transition: 0.1s;
+		}
+	}
+
+	&__user-image {
+		position: relative;
+		margin-right: 10px;
+
+		span {
+			position: absolute;
+			top: -5px;
+			right: -5px;
+			width: 15px;
+			height: 15px;
+			border-radius: 50%;
+			background-color: @main-color; 
+			font-size: 10px;
+			line-height: 15px;
+			text-align: center;
 		}
 	}
 
@@ -200,12 +220,12 @@
 		display: inline-block;
 		width: 160px;
 		height: 40px;
-		margin-right: 50px; 
+		margin-right: 30px; 
 		background-image: url('../img/logo.png');
 		background-position: center;
 
 		@media @tablet {
-			margin-left: 150px;
+			margin-left: 20px;
 			margin-right: 0;
 		}
 
